--- a/date.html
+++ b/date.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html><!-- 
 scripts and programs that download content transparent to the user are not allowed without permission
---><html lang=en><head><meta http-equiv=Content-Type content="text/html; charset=utf-8"><title>Denver, USA - current and accurate time</title>
+--><html lang=en><head><meta http-equiv=Content-Type content="text/html; charset=utf-8"><title>Denver, USA - current and accurate time</title><meta name=description content="This fullscreen or popup-window displays a clock showing current time in any time zone in the world."><meta name=keywords content="clock, time zone, local time, international, current, big clock, large clock, date, time, count, counts"><style>
+@font-face{font-family:iconfont;src:url("/common/fonts/iconfont.woff2?v7") format("woff2"),url("/common/fonts/iconfont.woff?v7") format("woff"),url("/common/fonts/iconfont.ttf?v7") format("truetype"),url("/common/fonts/iconfont.svg?v7#iconfont") format("svg");font-weight:400;font-style:normal}
+</style>
+
+<link rel="preload" href="/common/fonts/iconfont.woff2?v7" as="font" type="font/woff2" crossorigin>
 <link rel="preconnect" href="https://c.tadst.com" crossorigin><link href="/common/wstyle_72.css" rel=stylesheet type="text/css"><script src="/common/fullscreen_8.js"></script><style>
 a {text-decoration:none;color:#000;}
 .t100 {width:100%;height:100%;}
